--- a/web/styles.css
+++ b/web/styles.css
@@ -1,14 +1,20 @@
-@import url(https://fonts.googleapis.com/css?family=Roboto);
-
+@font-face {
+    font-family: norse;
+    src: url("../Fonts/viking/Viking.ttf");
+}
 html, body {
   width: 100%;
   height: 100%;
   margin: 0;
   padding: 0;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Viking', sans-serif;
 }
 
 #output {
   padding: 20px;
   text-align: center;
+}
+
+.nodeText{
+
 }
